--- a/assignments/Css_Framework/pos/customer.html
+++ b/assignments/Css_Framework/pos/customer.html
@@ -24,7 +24,7 @@
                     <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: rgb(0 6 255);" href="customer.html">Customer</a>
+                    <a class="nav-link" style="color: #0d6efd;" href="customer.html">Customer</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="item.html">Item</a>
