--- a/assignments/Css_Framework/pos/home.html
+++ b/assignments/Css_Framework/pos/home.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" style="color: rgb(0 6 255);" href="home.html.html">Home</a>
+                    <a class="nav-link" style="color: #0d6efd;" href="home.html.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"  href="customer.html">Customer</a>
