--- a/assignments/Css_Framework/pos/item.html
+++ b/assignments/Css_Framework/pos/item.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="customer.html">Customer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: rgb(0 6 255);"  href="item.html">Item</a>
+                    <a class="nav-link" style="color:#0d6efd;"  href="item.html">Item</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="placeOrder.html">Order</a>
