--- a/assignments/Css_Framework/pos/placeOrder.html
+++ b/assignments/Css_Framework/pos/placeOrder.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="item.html">Item</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: rgb(0 6 255);"  href="placeOrder.html">Order</a>
+                    <a class="nav-link" style="color: #0d6efd;"  href="placeOrder.html">Order</a>
                 </li>
 
             </ul>
