--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         <div class="cf-inner">
                             <div class="inner">
                                 <div class="dec-icon">
-                                    <img src="assets/images/expertise/IOT%20Application.png" alt="lakshan">
+                                    <img src="assets/images/expertise/IOT Application.png" alt="lakshan">
                                 </div>
                                 <p> Discover the Next Generation of the human world.</p>
                             </div>
