--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <!-----------------------------------1024px----------------------------------->
     <link rel="stylesheet" href="assets/css/Responsive1024px/section1.css">
-
+    <link rel="stylesheet" href="assets/css/Responsive1024px/min.css">
 
 
     <!-----------------------------------425px----------------------------------->
