--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <link rel="stylesheet" href="assets/css/Responsive1024px/min.css">
 
 
+
     <!-----------------------------------425px----------------------------------->
 <!--    <link rel="stylesheet" href="assets/css/Responsive425px/section1.css">-->
 <!--    <link rel="stylesheet" href="assets/css/Responsive425px/section2.css">-->
@@ -65,7 +66,6 @@
 <!--    <link rel="stylesheet" href="assets/css/Responsive425px/section7.css">-->
 <!--    <link rel="stylesheet" href="assets/css/Responsive425px/section8.css">-->
 <!--    <link rel="stylesheet" href="assets/css/Responsive425px/footer.css">-->
-
 
 
 </head>
@@ -629,6 +629,25 @@
 
         </section>
 
+        <!--                loading section-->
+
+        <section class="loading">
+            <svg class="pl" viewBox="0 0 200 200" width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+                <defs>
+                    <linearGradient id="pl-grad1" x1="1" y1="0.5" x2="0" y2="0.5">
+                        <stop offset="0%" stop-color="#FAC921" />
+                        <stop offset="100%" stop-color="#FAC921" />
+                    </linearGradient>
+                    <linearGradient id="pl-grad2" x1="0" y1="0" x2="0" y2="1">
+                        <stop offset="0%" stop-color="#FAC921" />
+                        <stop offset="100%" stop-color="#FAC921" />
+                    </linearGradient>
+                </defs>
+                <circle class="pl__ring" cx="100" cy="100" r="82" fill="none" stroke="url(#pl-grad1)" stroke-width="36" stroke-dasharray="0 257 1 257" stroke-dashoffset="0.01" stroke-linecap="round" transform="rotate(-90,100,100)" />
+                <line class="pl__ball" stroke="url(#pl-grad2)" x1="100" y1="18" x2="100.01" y2="182" stroke-width="36" stroke-dasharray="1 165" stroke-linecap="round" />
+            </svg>
+        </section>
+
 
 
     </main>
@@ -658,6 +677,17 @@
     <p>©2023 All Rights Reserved | Lakshan Rashmika</p>
 
 </footer>
+
+<script src="assets/code.jquery.com_jquery-3.7.1.min.js"></script>
+
+<script>
+    $(window).on('load',function (){
+        $(".loading").fadeOut(1000);
+        console.log("Window is fully loaded");
+    });
+
+
+</script>
 
     
 </body>
