--- a/assignments/JS/KNight/index.html
+++ b/assignments/JS/KNight/index.html
@@ -1,156 +1,288 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
     <title>Knight-Rider</title>
+<!--    <link rel="stylesheet" href="../../FrameWork/POS/assets/css/bootstrap.css">-->
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
 </head>
-
 <style>
-    .haderName{
-        margin-left: 32vw;
+
+    main > section {
+        width: max-content;
+        height: 50vh;
+        position: absolute;
+        margin: auto;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+    }
+
+    main > section > h1 {
         color: white;
+        text-align: center;
+    }
+
+    main > section > section > section:first-child {
+        width: max-content;
+        height: 40vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    main > section > section > section > div {
+        width: 150px;
+        height: 50px;
+        border: 1px solid #ffffff;
+    }
+
+    main > section > section > section:last-child {
+        width: max-content;
+        height: max-content;
+        position: absolute;
+        margin: auto;
+        top: 40vh;
+        bottom: 0;
+        right: 0;
+        left: 0;
+    }
+
+    main > section > div:nth-child(2) {
+        width: 400px;
+        height: 50px;
+        display: flex;
+        color: white;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
+    }
+
+    main > section > div:nth-child(2) > h2:nth-child(3) {
+        position: absolute;
+        right: 80px;
+    }
+
+    main > section > div:nth-child(2) > h2:nth-child(4) {
+        position: absolute;
+        right: 0;
+    }
+
+    main {
+        width: 100%;
+        height: 100vh;
+        background-color: #141417;
+
+        border: #f8c5c5;
     }
 </style>
+<body>
 
-
-
-<body style="background-color: black">
-<div class="container-fluid " style="height: 80vh">
-    <div class="row-cols-1 h-50    position-relative ">
-        <div class="container w-100 h-100 ">
-
-            <div class="row  w-100 h-50  position-relative justify-content-center p-0 m-0">
-            </div>
-            <h1 class="haderName">Knight Rider</h1>
-
-            <div class="row h-25 position-relative justify-content-center start-50 translate-middle mt-5 ms-5 "
-                 style="width:40%; ">
-                <div class="col-4  p-0 m-0 ">
-                    <p class="fs-3 opacity-75  d-inline-block" style="width:40%; color: #ffffff; margin-left: -20px;">Speed </p>
-                    <p id="speed" class="fs-3  ms-2 ps-2 border-end border-danger d-inline-block  "
-                       style="width: 60%; color: #0c5ace">85%</p>
-                </div>
-                <div class="col-8  p-0 m-0 ">
-                    <p class="fs-3 opacity-75 ms-3  d-inline-block " style="width:60%; color: #ffffff">Waiting Time </p>
-                    <p id="time" class="fs-3   ps-0  d-inline-block" style="width: 10%; color: #0c5ace">450</p>
-                </div>
-            </div>
+<main>
+    <section>
+        <h1>Knight Rider</h1>
+        <div>
+            <h2 class="me-2">Speed :</h2>
+            <h2 class="text-danger" id="speed">50</h2>
+            <h2>wait :</h2>
+            <h2 class="text-danger" id="wait">1000</h2>
         </div>
-    </div>
-    <div class="row-cols-1 h-25 position-relative">
-        <div class="container-fluid  position-absolute top-50 start-50 translate-middle p-0 "
-             style="width: 52.2vw; height: 15vw;">
-            <div class="row bg-white  w-100 m-0 position-absolute top-50 translate-middle-y rounded-1 gap-1 "
-                 style="height: 30%;">
-                <div id="firstDiv" class="col-1" style="border-radius: 4px 0px 0px 4px"></div>
-                <div class="col-1" style="width: 83px;"></div>
-                <div class="col-1" style="width: 83px;"></div>
-                <div class="col-1" style="width: 83px;"></div>
-                <div class="col-1" style="width: 83px;"></div>
-                <div class="col-1" style="width: 83px;"></div>
-                <div class="col-1" style="width: 83px;"></div>
-                <div class="col-1" style="width: 83px;"></div>
-                <div class="col-1" style="width: 83px;"></div>
-                <div class="col-1" style="width: 83px;"></div>
-                <div id="lastDiv" class="col-1" style="width: 83px; border-radius: 0px 4px 4px 0px"></div>
-            </div>
-        </div>
-    </div>
-    <div class="row h-25 w-50  position-relative align-items-center" style="left: 30vw;">
-        <div class="col-5 d-flex">
-            <div>
-                <button id="start" class="btn  btn-outline-primary me-5 " style="width: 8vw;">Start</button>
-            </div>
-            <div>
-                <button id="stop" class="btn  btn-outline-danger me-5 " style="width: 8vw;">Stop</button>
-            </div>
-        </div>
-        <div class="col-7 position-relative  ">
-            <input type="range" class="form-range w-75 h-25 ms-5" min="0" max="300" value="255" id="customRange"
-                   style=" ">
-        </div>
-    </div>
-</div>
-<audio id="audio" src="assets/KnightRider.mp3"></audio>
 
-<script src="assets/bootstrap/js/bootstrap.bundle.js"></script>
-<script src="assets/bootstrap/script.js"></script>
+        <section>
+            <section>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </section>
 
+            <section>
+                <button id="start" class="btn btn-primary">Start</button>
+                <button id="stop" class="btn btn-danger">Stop</button>
+                <input type="range" id="range" min="40" max="100" step="1" value="50">
+            </section>
+
+        </section>
+
+    </section>
+</main>
+<script src="../../../assets/code.jquery.com_jquery-3.7.1.min.js"></script>
 <script>
-    let opacity = [0.3, 0.4, 0.4, 0.4, 0.5, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2];
-    let newopacity = [0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 1, 1, 0.9, 0.8, 0.7, 0.6, 0.5, 0.5, 0.4, 0.4, 0.4, 0.3];
-    let element = document.querySelectorAll(".col-1");
-    let range = document.querySelector("#customRange");
-    let txtSpeed = document.querySelector("#speed");
-    let txtTime = document.querySelector("#time");
-    let firstDiv = document.querySelector("#firstDiv");
-    let lastDiv = document.querySelector("#lastDiv");
-    let btnStart = document.querySelector("#start");
-    let btnStop = document.querySelector("#stop");
-    let audio = document.querySelector("#audio");
-    let value = 45;
+
+    let colors_right = ["#962727", "#b04141", "#ec6666", "#eaadad", "#ffc3c3", "#ffc3c3", "white"];
+
+    let colors_left = ["#962727", "#b04141", "#ec6666", "#eaadad", "#ffc3c3", "#ffc3c3", "white"];
+
+    let setColor_right = [];
+
+    let setColor_left = [];
+
+    let div_list = $("main>section>section>section>div");
+
+    let btnStart = $("#start");
+
+    let btnStop = $("#stop");
+
+    // let range = document.getElementById("range");
+
     let interval;
-    let intervalReverse;
 
-    //setColor();
+    let i = 0;
 
-    range.addEventListener("input", function () {
-        value = 300 - parseInt(range.value);
+    let rightInterval;
+
+    let leftInterval;
+
+    const audio = new Audio("assets/KnightRider.mp3");
+
+    let animate_time = 50;
+
+    let wait_time = 1000;
+
+    /*function setMoveLeft() {
+      setColor.unshift(colors[i]);
+      for (let j = 0; j < 6; j++) {
+          div_list[5 - j].style.backgroundColor = setColor[j];
+      }
+      i = i + 1;
+  }*/
+
+    /* function setMoveRight() {
+       setColor.unshift(colors[i]);
+       for (let j = 0; j < 6; j++) {
+           div_list[j].style.backgroundColor = setColor[j];
+       }
+       i = i + 1;
+   }*/
+
+    //
+    // audio.addEventListener("canplaythrough", () => {
+    //     audio.loop = false;
+    //     audio.play().catch(e => {
+    //         // audio.play();
+    //     })
+    // });
+
+    function setLeft() {
+        clearInterval(leftInterval);
+
+        leftInterval = setInterval(function () {
+            setColor_left.unshift(colors_left[i]);
+            for (let j = 0; j < 6; j++) {
+                // div_list[5 - j].style.backgroundColor = setColor_left[j];
+                let currentDiv = div_list[5 - j];
+                $(currentDiv).css('background', setColor_left[j]);
+            }
+            i = i + 1;
+        }, animate_time);
+
+        clearInterval(rightInterval);
+    }
+
+    function setRight() {
+        clearInterval(rightInterval);
+
+        rightInterval = setInterval(function () {
+            setColor_right.unshift(colors_right[i]);
+
+            for (let j = 0; j < 6; j++) {
+                // div_list[j].style.backgroundColor = setColor_right[j];
+                let currentDiv = div_list[j];
+                $(currentDiv).css('background', setColor_right[j]);
+            }
+
+            i = i + 1;
+        }, animate_time);
+        clearInterval(leftInterval);
+    }
+
+    function setCompleatRight() {
+        setRight();
+        setColor_right = [];
+        i = 0;
+    }
+
+    function setCompleatLeft() {
+        setLeft();
+        setColor_left = [];
+        i = 0;
+    }
+
+    btnStart.on('click', function () {
         clearInterval(interval);
-        setColor();
-        txtSpeed.innerText = ((100 - (value * 0.5) / 1.5)).toFixed(0) + "%";
-        txtTime.innerText = (300 - parseInt(range.value)) * 10;
+        interval = setInterval(animate, wait_time);
+        audio.loop = true;
+        audio.play();
     });
 
-    function setColor() {
-        interval = setInterval(function () {
-            for (let i = 0; i < 11; i++) {
-                element[i].style.backgroundColor = "firebrick";
-                element[i].style.opacity = opacity[i + 6];
-            }
-
-            let lastColor = opacity.pop();
-            opacity.unshift(lastColor);
-
-            if (lastDiv.style.opacity == `0.3`) {
-                clearInterval(intervalReverse);
-                clearInterval(interval);
-                setColorReverse();
-            }
-        }, value);
-    }
-
-    function setColorReverse() {
-        interval = setInterval(function () {
-            for (let i = 0; i < 11; i++) {
-                element[i].style.backgroundColor = "firebrick";
-                element[i].style.opacity = newopacity[i];
-            }
-
-            let firstColor = newopacity.shift();
-            newopacity.push(firstColor);
-
-            if (firstDiv.style.opacity == `0.3`) {
-                clearInterval(interval);
-                clearInterval(intervalReverse)
-                setColor();
-            }
-        }, value);
-    }
-
-    btnStart.addEventListener("click", function () {
+    btnStop.on('click', function () {
+        clearInterval(leftInterval);
+        clearInterval(rightInterval);
         clearInterval(interval);
-        setColor();
-        audio.play();
-    })
-
-    btnStop.addEventListener("click", function () {
-        clearInterval(interval);
+        audio.loop = false;
         audio.pause();
-    })
+    });
+
+    let root = true;
+
+    let second = true;
+
+    function animate() {
+        if (root) {
+            setCompleatRight();
+
+            // setCompleatLeft();
+            root = false;
+
+            // if (second){
+            //     setCompleatLeft();
+            //     second = false;
+            // }
+
+        } else {
+            setCompleatLeft();
+            root = true;
+
+            // if (!second){
+            //     setCompleatLeft();
+            //     second = true;
+            // }
+        }
+    }
+
+    function sum(range, time) {
+        return parseInt(range) + parseInt(time);
+    }
+
+    const rangeInput = $('#range');
+    const speed = $('#speed');
+    const wait = $('#wait');
+
+    function updateValue() {
+        console.log(rangeInput.val());
+
+        animate_time = rangeInput.val();
+
+        let waitT = 1000 + parseInt(rangeInput.val() + 2);
+
+        wait_time = waitT;
+
+        speed.text(rangeInput.val());
+
+        wait.text(waitT);
+
+        // animate_time  = parseInt(final);
+        // console.log(value);
+    }
+
+    rangeInput.on('input', updateValue);
+
+    // speed.textContent = animate_time+"";
+
 </script>
 </body>
 </html>
