--- a/assignments/JS/cal/index.html
+++ b/assignments/JS/cal/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body class="bg-dark">
-<div class="container bg-light h3 position-absolute  start-50 translate-middle" style="height: 560px; width: 500px;box-shadow: -8px -8px 15px rgba(225,225,225,0.1),5px 5px 15px rgba(0,0,0,0.2); border-radius: 30px; top:300px">
+<div class="container bg-light h3 position-absolute  start-50 translate-middle" style="height: 560px; width: 500px;box-shadow: -8px -8px 15px rgba(225,225,225,0.1),5px 5px 15px rgba(0,0,0,0.2); border-radius: 30px; top:23vw">
     <div class="row bg-light" style="border-radius: 30px">
 
         <div class="col-xxl-12" style="height: 70px">
